Update config.yaml with new settings and hashtags

--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,10 @@
 orcid_ids:
   - "0000-0001-7553-7337"
 
-days_back: 1
-max_posts_total: 1
+days_back: 10
+max_posts_total: 2
 
 hashtags:
-  - "research"
+  - "#Swesem"
+  - "#MedSky"
+  - "#AcademicSky"
